2024-12-12  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* scripts/internal/generate-html-contents.pl
	updated to also output information about dependencies and minimal
	FastJet version

2024-12-12 Thu  <gavin.salam@physics.ox.ac.uk> + Matteo + Gregory

	* NEWS:
	* contribs.svn:
	updated IFNPlugin to 1.0.3 and added CMPPlugin 1.0.0
	

	* scripts/internal/Template/FJCONTRIB.cfg:
	added commented "minimal_fastjet_version:..." line

	* DEVEL-GUIDELINES:
	replaced a ref to VERSION -> FJCONTRIB.cfg

	* configure:
	fixed location of output of `fastjet-config --version` info 

2024-12-12  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* configure:
	* scripts/internal/common.sh:
	* DEVEL-GUIDELINES:
	added handling of minimal_fastjet_version in contribs 
	configuration files

2024-12-11  Gavin Salam  <gavin.salam@physics.ox.ac.uk>

	* VERSION:
	upped this to 1.100-devel, to reflect significance of new
	dependencies functionality.

2024-12-11  Gregory Soyez  <soyez@fastjet.fr> + Gavin+Matteo

	* contribs.svn:
	switched LundPlane over to version 2.1.2

2024-12-11  Gavin Salam  <gavin.salam@physics.ox.ac.uk>

	* NEWS:
	* contribs.svn:
	updated RecursiveTools to 2.0.4 + mentioned this in NEWS

2024-12-10 Tue  <gavin.salam@physics.ox.ac.uk>

	* NEWS:
	starting work on NEWS for 1.057

	* contribs.svn:
	updated RecursiveTools to 2.0.4-rc1 and added IFNPlugin 1.0.0-alpha2, to facilitate
	experimentation with dependencies by other groups. 

2024-12-09 Gavin Salam + Matteo Cacciari + Gregory Soyez

	* VERSION:

	upped to 1.057-devel

	* Makefile.in:
	* configure:

	modification to scheme for support of dependencies between contribs. 
	It now requires contribs to be in a new form where there is a 
	ContribName/FJCONTRIB.cfg file that contains the version number and
	any dependencies. 

	* scripts/internal/common.sh:
	* scripts/release-contrib.sh:

	various changes to support the new scheme with
	ContribName/FJCONTRIB.cfg files and the option to have either that